FINERACT-1724-COB-hardlocked-loans-and-inline-cob-issue